[package]
name = "profile-ebpf-clone-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
profile-ebpf-clone-common = { path = "../profile-ebpf-clone-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "profile-ebpf-clone"
path = "src/main.rs"
